--- a/package.json
+++ b/package.json
@@ -2,15 +2,10 @@
   "name": "note-taker",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js ",
-    "build": "cd client && npm run build",
-    "install": "cd client && npm install",
-    "server": "nodemon server",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "start": "node server.js "
   },
   "author": "",
   "license": "ISC",
